# GoldSapa_ML

./: .gitignore  README.md  TZ.md  doc.md  main.py  notebook.py  pyproject.toml
__marimo__/session/: notebook.py.json
src/: aggregate.py  analytics.py  config.py  extract.py  features.py  forecast.py  model.py  model_v2.py  model_v3.py  model_v4.py  pipeline.py  validate.py
