[project]
name = "goldsapa-ml"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "holidays>=0.93",
    "marimo>=0.21.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
